# RPA

./: README.md  dados_livros.xlsx  pyproject.toml  show_info_project.py  tamanho_dependencias.txt
Extrator de PDF/: README.md  extrair_dados_notas_fiscais.py  extrair_pdf.py  gerar_pdf.py  main.py  relatorio_notas_fiscais.xlsx
webscraping/: README.md  bs4.py  webscraping_books.py
